Fixing the bug that shows white font color in Dark Mode.

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
   --background: #fff;
-  --text-color: #fff;
+  --text-color: #000;
   --cart-bg: #e9e8e7;
 }
 
